@@ -31,7 +31,7 @@ else()
     list(APPEND ORTHANC_BOOST_COMPONENTS locale)
   endif()
 
-  list(APPEND ORTHANC_BOOST_COMPONENTS filesystem thread system date_time regex)
+  list(APPEND ORTHANC_BOOST_COMPONENTS filesystem thread system date_time regex iostreams)
   find_package(Boost COMPONENTS ${ORTHANC_BOOST_COMPONENTS})
 
   if (NOT Boost_FOUND)
