@@ -52,7 +52,13 @@ namespace Orthanc
 
     static void ReadFile(std::string& content,
                          const std::string& path,
-                         bool log = true);
+                         bool log);
+
+    static void ReadFile(std::string& content,
+                         const std::string& path)
+    {
+      ReadFile(content, path, true /* log */);
+    }
 
     static bool ReadHeader(std::string& header,
                            const std::string& path,
@@ -60,10 +66,25 @@ namespace Orthanc
 
     static void WriteFile(const void* content,
                           size_t size,
-                          const std::string& path);
+                          const std::string& path,
+                          bool callFsync);
+
+    static void WriteFile(const void* content,
+                          size_t size,
+                          const std::string& path)
+    {
+      WriteFile(content, size, path, false /* don't automatically call fsync */);
+    }
 
     static void WriteFile(const std::string& content,
-                          const std::string& path);
+                          const std::string& path,
+                          bool callFsync);
+
+    static void WriteFile(const std::string& content,
+                          const std::string& path)
+    {
+      WriteFile(content, path, false /* don't automatically call fsync */);
+    }
 
     static void RemoveFile(const std::string& path);
 
