@@ -575,5 +575,12 @@
 
   // The compression level that is used when transcoding to one of the
   // lossy/JPEG transfer syntaxes (integer between 1 and 100).
-  "DicomLossyTranscodingQuality" : 90
+  "DicomLossyTranscodingQuality" : 90,
+
+  // Whether "fsync()" is called after each write to the storage area
+  // (new in Orthanc 1.7.4). If this option is set to "true", Orthanc
+  // will run more slowly, but the DICOM are guaranteed to be
+  // immediately written to the disk. This option defaults to "false"
+  // in Orthanc <= 1.7.3, and to "true" in Orthanc >= 1.7.4.
+  "SyncStorageArea" : true
 }
